# quasistatic_evolutions_simulations

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run-simulations.yml
docker_image/: Dockerfile  README.md  build_and_push.sh
quasistatic_evol/: analyze_results.py  configuration.json  create_videos.py  main.py  plotting.py  rod_simulator.py  rod_simulator_2.py
workflows/: run-simulations.yml
